添加一些工具信息

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,8 @@ beautifulsoup4~=4.13.3
 
 huggingface-hub~=0.29.2
 setuptools~=75.8.0
+
+langchain-core
+langgraph>0.2.27
+langchain
+langchain_openai
